--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/create.html
@@ -77,7 +77,7 @@
 			</form>
 		</md-content>
 		
-		<md-card-actions layout="row">
+		<md-card-actions layout="row" layout-align="end">
 			<md-button ng-click="goList()">취소</md-button>
 			<md-button class="md-raised md-primary" type="sumbit" ng-click="create()" ng-disabled="!frm.$valid">등록</md-button>
 		</md-card-actions>
