--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/list.html
@@ -32,7 +32,8 @@
 							name: '이름',
 							address: '호스트'
 						}"
-						search-info="searchInfo"
+						
+						default-sorts="'createdAt,desc'"
 						>
 						<!-- 상세검색 필드 -->
 						<cm-search-list-filters>
