--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/files/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/files/list.html
@@ -26,7 +26,8 @@
 				name: '파일명',
 				ext : '확장자'
 			}"
-			search-info="searchInfo"
+			
+			default-sorts="'createdAt,desc'"
 			>
 			<!-- 상세검색 필드 -->
 			<cm-search-list-filters>
