--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/list.html
@@ -25,7 +25,8 @@
 				name: '코드명',
 				groupId : '코드아이디'
 			}"
-			search-info="searchInfo"
+			
+			default-sorts="'createdAt,desc'"
 			>
 			<!-- 상세검색 필드 -->
 			<cm-search-list-filters>
