--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/modify.html
@@ -30,7 +30,7 @@
 						</div>
 				</md-input-container>
 			</md-content>
-			<md-card-actions layout="row">
+			<md-card-actions layout="row" layout-align="end">
 				<md-button ng-click="goView()">취소</md-button>
 				<md-button class="md-raised md-primary" type="sumbit" ng-click="modify()" ng-disabled="!frm.$valid">수정</md-button>
 			</md-card-actions>
