--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/select.html
@@ -6,7 +6,9 @@
 			domains="menuGroups"
 			is-paging="false"
 			default-search-params="defaultSearchParams"
-			search-info="searchInfo">
+			
+			default-sorts="'createdAt,desc'"
+			>
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
