--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menus/modify.html
@@ -85,7 +85,7 @@
 				</md-input-container>
 			</md-card-content>
 			<md-card-actions layout="row" layout-align="end">
-				<md-button class="md-raised md-primary" type="sumbit" ng-click="update(form, $event)" ng-disabled="isProcess">수정</md-button>
+				<md-button class="md-raised md-primary" type="sumbit" ng-click="modify()" ng-disabled="isProcess">수정</md-button>
 				<md-button ng-click="goBack()">취소</md-button>
 			</md-card-actions>
 		</md-card>
