--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
@@ -22,7 +22,8 @@
 				siteId: 'siteId',
 				name: '이름'
 			}"
-			search-info="searchInfo"
+			
+			default-sorts="'createdAt,desc'"
 			>
 			
 			<cm-search-list-filters>
