--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
@@ -76,7 +76,9 @@
 				</tr>
 			</table>
 		</md-card-content>
-		
+		<md-card-actions layout="row" layout-align="end">
+			<md-button ng-click="goList()" class="md-raised">목록</md-button>
+		</md-card-actions>
 	</md-card>
 	
 	<md-card>
@@ -94,7 +96,9 @@
 				menuGroupId: 'menuGroupId',
 				name: '이름'
 			}"
-			search-info="searchInfo">
+			
+			default-sorts="'createdAt,desc'"
+			>
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
