--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/create.html
@@ -41,7 +41,7 @@
 			</md-content>
 		</div>
 		
-		<md-card-actions layout="row">
+		<md-card-actions layout="row" layout-align="end">
 			<md-button ng-click="goList()">취소</md-button>
 			<md-button class="md-raised md-primary" type="sumbit" ng-click="create()" ng-disabled="!frm.$valid">생성</md-button>
 		</md-card-actions>
