--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/modify.html
@@ -45,7 +45,7 @@
 				</form>
 			</md-content>
 		</div>
-		<md-card-actions layout="row">
+		<md-card-actions layout="row" layout-align="end">
 			<md-button ng-click="goList()">취소</md-button>
 			<md-button class="md-raised md-primary" type="sumbit" ng-click="modify()" ng-disabled="!frm.$valid">수정</md-button>
 		</md-card-actions>
