--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/selectList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/selectList.html
@@ -8,7 +8,8 @@
 				siteId: 'siteId',
 				name: '이름'
 			}"
-			search-info="searchInfo"
+			
+			default-sorts="'createdAt,desc'"
 			>
 			
 			<cm-search-list-filters>
@@ -39,37 +40,6 @@
 				</md-list-item>
 			</cm-search-list-items>
 		</cm-search-list>
-		
-		
-		<!-- <cm-search-list
-			resource-url="/rest/configuration/sites"
-			domains="domains"
-			is-paging="false"
-			default-search-params="{name: '이름'}"
-			search-info="searchInfo">
-			
-			<cm-search-list-filters>
-				<md-card-content class="content" layout="column">
-					<md-input-container layout-fill="">
-						<label>이름</label>
-						<input name="name" />
-					</md-input-container>
-				</md-card-content>
-			</cm-search-list-filters>
-			
-			<cm-search-list-items>
-				<md-list-item ng-repeat="domain in domains.content" layout="row">
-					<p>
-						{{domain.name}}
-					</p>
-					<md-button class="md-primary md-raised" ng-click="putSiteOfMenuGroup(domain.siteId)" ng-show="siteId != domain.siteId">
-						사이트 설정
-					</md-button>
-					<md-divider ng-if="!$last"></md-divider>
-				</md-list-item>
-			</cm-search-list-items>
-			
-		</cm-search-list> -->
 		
 	</cm-dialog-template-content>
 </md-dialog>
