--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -20,7 +20,8 @@
 				name: '이름',
 				authority: '권한'
 			}"
-			search-info="searchInfo"
+			
+			default-sorts="'createdAt,desc'"
 			>
 			
 			<cm-search-list-filters>
