--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/modify.html
@@ -25,7 +25,7 @@
 					<textarea name="description" ng-model="domain.description" md-maxlength="4000" maxlength="4000"></textarea>
 				</md-input-container>
 			</md-card-content>
-			<md-card-actions layout="row">
+			<md-card-actions layout="row" layout-align="end">
 				<md-button ng-click="goView()">취소</md-button>
 				<md-button class="md-raised md-primary" type="sumbit" ng-click="update(form, $event)" ng-disabled="isProcess">수정</md-button>
 			</md-card-actions>
