--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -16,12 +16,15 @@
 		<cm-search-list
 			resource-url="/rest/configuration/users"
 			domains="domains"
-			search-info="searchInfo"
+			
 			sort-items="{
 				userId: 'userId',
 				name: '이름',
-				email: '이메일'
-			}">
+				email: '이메일',
+				createdAt : '생성일'
+			}"
+			default-sorts="'createdAt,desc'"
+			>
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
