searchList 개선중: - query string을 보고 목록 로딩하도록 수정(진행중) - 기본 정렬 정보가 정렬 팝업에 표시되도록 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -17,7 +17,7 @@
 			<md-tooltip md-direction="top">상세 검색</md-tooltip>
 			<md-icon>expand_more</md-icon>
 		</md-button>
-			
+		
 		<md-menu ng-if="sortItems != null">
 			<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)" >
 				<md-tooltip md-direction="top">정렬</md-tooltip>
@@ -44,12 +44,13 @@
 		<md-divider></md-divider>
 		<ng-transclude ng-transclude-slot="filters" />
 		<md-button class="md-primary md-raised" ng-click="search()">검색</md-button>
-		<md-button ng-click="initSearch()">
+		<md-button ng-click="clearSearch()">
 			<span class="text-muted">검색초기화</span>
 		</md-button>
 		<md-divider></md-divider>
 	</div>
 	<!-- 상세 검색 필드 끝 -->
+	{{current.page}}
 	<!-- 페이징 -->
 	<div ng-if="isPaging != false">
 		<uib-pagination
@@ -60,7 +61,7 @@
 			items-per-page="domains.size"
 			boundary-links="true"
 			max-size="10"
-			ng-model="searchInfo.page"
+			ng-model="current.page"
 			ng-change="onPageChange()" />
 		
 		<uib-pager
@@ -68,7 +69,7 @@
 			layout-margin=""
 			template-url="/configuration/partials/directive/pager"
 			total-items="domains.totalElements"
-			ng-model="searchInfo.page"
+			ng-model="current.page"
 			ng-change="onPageChange()" />
 	</div>
 	<!-- 페이징 끝-->
