searchList 테스트중 메뉴모음 목록을 불러올때 createdAt으로 검색하게 해서 오류나는 부분 수정(메뉴 모음은 createdAt필드가 없음)

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/menuGroups/select.html
@@ -5,10 +5,7 @@
 			resource-url="/rest/configuration/menuGroups"
 			domains="menuGroups"
 			is-paging="false"
-			default-search-params="defaultSearchParams"
-			
-			default-sorts="'createdAt,desc'"
-			>
+			default-search-params="defaultSearchParams">
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
