--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -50,6 +50,9 @@
 		<md-divider></md-divider>
 	</div>
 	<!-- 상세 검색 필드 끝 -->
+	{{current.page}}
+	
+	<md-button ng-click="aa()">test</md-button>
 	<!-- 페이징 -->
 	<div ng-if="isPaging != false">
 		<uib-pagination
