searchList 디렉티브: searchInfo  로 상세 검색 가능하도록 수정 사용자모임 관리 기능 부족한 부분 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
@@ -18,11 +18,11 @@
 		<cm-search-list
 			resource-url="/rest/configuration/sites"
 			domains="domains"
+			search-info="searchInfo"
 			sort-items="{
 				siteId: 'siteId',
 				name: '이름'
 			}"
-			
 			default-sorts="'createdAt,desc'"
 			>
 			
@@ -45,10 +45,10 @@
 			<cm-search-list-items>
 				<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)">
 					
-					<div flex="15" class="text-muted">
+					<div flex="30" class="text-muted">
 						{{domain.siteId}}
 					</div>
-					<b flex="85">{{domain.name}}</b>
+					<b flex="70">{{domain.name}}</b>
 					
 					<md-divider ng-if="!$last"></md-divider>
 				</md-list-item>
