--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -16,7 +16,7 @@
 		<cm-search-list
 			resource-url="/rest/configuration/users"
 			domains="domains"
-			
+			search-info="searchInfo"
 			sort-items="{
 				userId: 'userId',
 				name: '이름',
