--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
@@ -19,7 +19,7 @@
 	</h3>
 	
 	<md-card ng-clock="">
-		<md-card-header>
+		<md-card-header layout-align="none center">
 			<md-card-header-text>
 				<span class="md-title">기본정보</span>
 			</md-card-header-text>
@@ -27,6 +27,19 @@
 				<md-tooltip>기본 정보 수정</md-tooltip>
 				<md-icon>edit</md-icon>
 			</md-button>
+			<md-menu>
+				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+					<md-icon>more_vert</md-icon>
+				</md-button>
+				<md-menu-content>
+					<md-menu-item>
+						<md-button ng-click="delete($event)">
+							<md-icon>remove_circle</md-icon>
+							삭제 ...
+						</md-button>
+					</md-menu-item>
+				</md-menu-content>
+			</md-menu>
 		</md-card-header>
 		
 		<md-content layout-padding="">
