dialogTemplate directive 개선중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/dialogTemplate.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/dialogTemplate.html
@@ -10,7 +10,7 @@
 				ng-if="onAction != null"
 				class="md-raised"
 				ng-disabled="isProcess"
-				ng-click="onAction({target: $event})">{{actionName}}</md-button>
+				ng-click="onAction()">{{actionName}}</md-button>
 			
 		</div>
 	</md-toolbar>
