searchLisr directive 테스트중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -54,9 +54,9 @@
 	
 	<md-button ng-click="aa()">test</md-button>
 	<!-- 페이징 -->
-	<div ng-if="isPaging != false">
+	<div ng-show="isPaging != false">
 		<uib-pagination
-			ng-if="!isMobile()"
+			ng-show="!isMobile()"
 			layout-margin=""
 			template-url="/configuration/partials/directive/pagination"
 			total-items="domains.totalElements"
