검색조건 관련 사항 수정 적용.

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/email/servers/list.html
@@ -28,6 +28,7 @@
 					<cm-search-list
 						resource-url="/rest/configuration/email/servers"
 						domains="domains"
+						search-info="searchInfo"
 						sort-items="{
 							name: '이름',
 							address: '호스트'
