--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/files/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/files/list.html
@@ -21,6 +21,7 @@
 		<cm-search-list
 			resource-url="/rest/configuration/files"
 			domains="domains"
+			search-info="searchInfo"
 			sort-items="{
 				fileId : 'fileId',
 				name: '파일명',
