--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/list.html
@@ -20,6 +20,7 @@
 		<cm-search-list
 			resource-url="/rest/configuration/roles"
 			domains="domains"
+			search-info="searchInfo"
 			sort-items="{
 				name: '이름',
 				authority: '권한명'
