--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/select.html
@@ -4,7 +4,9 @@
 	
 	<cm-search-list
 		resource-url="/rest/configuration/roles"
-		domains="domains">
+		domains="domains"
+		search-info="searchInfo"
+		>
 		
 		<cm-search-list-filters>
 			<md-dialog-content class="content md-dialog-content" layout="column">
