--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/list.html
@@ -20,6 +20,7 @@
 		<cm-search-list
 			resource-url="/rest/configuration/groups"
 			domains="domains"
+			search-info="searchInfo"
 			sort-items="{
 				parentGroupId : '부모코드',
 				name: '코드명',
