--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/selectList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/selectList.html
@@ -4,6 +4,7 @@
 		<cm-search-list
 			resource-url="/rest/configuration/sites"
 			domains="domains"
+			search-info="searchInfo"
 			sort-items="{
 				siteId: 'siteId',
 				name: '이름'
