--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
@@ -3,7 +3,9 @@
 		
 		<cm-search-list
 			resource-url="/rest/configuration/userGroups"
-			domains="domains">
+			domains="domains"
+			search-info="searchInfo"
+			>
 			
 			<cm-search-list-filters>
 				<md-dialog-content class="content md-dialog-content" layout="column">
