사이트의 이름을 설정 정보에서 지정할 수 있도록 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -52,7 +52,7 @@
 	<!-- 상세 검색 필드 끝 -->
 	{{current.page}}
 	
-	<md-button ng-click="aa()">test</md-button>
+	<!-- <md-button ng-click="aa()">test</md-button> -->
 	<!-- 페이징 -->
 	<div ng-show="isPaging != false">
 		<uib-pagination
