--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/findPassword.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/findPassword.html
@@ -63,11 +63,11 @@ angular.module('cinnamon')
 </head>
 <body layout:fragment="body" layout-gt-xs="row" layout-align-gt-xs="center start" class="content">
 
-	<md-content flex-gt-xs="30" class="content" ng-controller="configuration.findPassword">
+	<md-content flex-xs="100" flex-sm="70" flex-md="50" flex="30" class="content" ng-controller="configuration.findPassword">
 		
 		<div layout-align="center center" layout="row">
 			<h2 class="md-headline">
-				<a href="/" target="_self">welcom to Cinnamon</a>
+				<a href="/" target="_self">welcom to <span th:text="${site.label}">Cinnamon</span></a>
 			</h2>
 		</div>
 		
@@ -98,6 +98,9 @@ angular.module('cinnamon')
 				
 			</md-card-content>
 			<md-button type="submit" class="md-raised md-primary">비밀번호 초기화 이메일 발송</md-button>
+			<md-card-actions layout="row" layout-align="end">
+				<md-button ng-click="goBack()">취소</md-button>
+			</md-card-actions>
 		</md-card>
 		
 	</md-content>
