--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -54,7 +54,7 @@ angular.module('cinnamon')
 		
 		<div layout-align="center center" layout="row">
 			<h2 class="md-headline">
-				<a href="/" target="_self">welcom to Cinnamon</a>
+				<a href="/" target="_self">welcom to <span th:text="${site.label}">Cinnamon</span></a>
 			</h2>
 		</div>
 		
