--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/modify.html
@@ -23,6 +23,10 @@
 					<input name="url" ng-model="site.url" md-maxlength="200" maxlength="200" />
 				</md-input-container>
 				<md-input-container class="md-block">
+					<label>라벨</label>
+						<input name="label" ng-model="site.label" md-maxlength="50" maxlength="50" />
+				</md-input-container>
+				<md-input-container class="md-block">
 					<label>설명</label>
 					<textarea name="description" ng-model="site.description" rows="5" md-maxlength="2000" maxlength="2000"></textarea>
 				</md-input-container>
