--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
@@ -57,6 +57,10 @@
 					<td class="text-muted">{{domain.url}}</td>
 				</tr>
 				<tr>
+					<th>라벨</th>
+					<td class="text-muted">{{domain.label}}</td>
+				</tr>
+				<tr>
 					<th>기본 메뉴 모음</th>
 					<td class="text-muted">
 						<a ng-href="/configuration/menuGroups/{{domain.defaultMenuGroup.menuGroupId}}" target="_self">{{domain.defaultMenuGroup.name}}</a>
