--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -96,7 +96,7 @@
 				<span class="md-title">등록된 사용자 모임</span>
 			</md-card-header-text>
 			
-			<md-button class="md-icon-button" ng-click="openCreateMenu()">
+			<md-button class="md-icon-button" ng-click="selectUserGroup($event)">
 				<md-tooltip>사용자 모임에 등록</md-tooltip>
 				<md-icon>add</md-icon>
 			</md-button>
