--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/create.html
@@ -35,6 +35,10 @@
 						</div>
 				</md-input-container>
 				<md-input-container class="md-block">
+					<label>라벨</label>
+						<input name="label" ng-model="site.label" md-maxlength="50" maxlength="50" />
+				</md-input-container>
+				<md-input-container class="md-block">
 					<label>설명</label>
 						<textarea name="description" ng-model="site.description" rows="5" md-maxlength="2000" maxlength="2000"></textarea>
 						<div ng-messages="frm.description.$error ">
