권한별 초기화면을 설정하는 기능 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/roles.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/roles.html
@@ -46,6 +46,8 @@
 	//]]>
 	</script>
 	<script src="/js/configuration/directives/searchList.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/js/configuration/directives/dialogTemplate.js"></script>
+	
 	<script src="/js/configuration/roles/listController.js" type="text/javascript" ></script>
 	<script src="/js/configuration/roles/viewController.js" type="text/javascript" ></script>
 	<script src="/js/configuration/roles/permissionController.js" type="text/javascript" ></script>
