--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
@@ -1,4 +1,3 @@
-
 <div class="content-container" ng-controller="configuration.roles.view">
 
 	<h3 layout-padding="" class="md-headline">
@@ -6,12 +5,11 @@
 	</h3>
 	
 	<md-card md-whiteframe="4" layout-padding="">
-	
 		<md-card-header>
 			<md-card-header-text>
 				<span class="md-title">기본정보</span>
 			</md-card-header-text>
-			<md-button class="md-icon-button" ui-sref="modify({permissionId: domains.permissionId})">
+			<md-button class="md-icon-button" ui-sref="modify({permissionId: domain.permissionId})">
 				<md-tooltip>기본 정보 수정</md-tooltip>
 				<md-icon>edit</md-icon>
 			</md-button>
@@ -19,35 +17,41 @@
 		<md-card-content>
 			<table class="table table-hover">
 				<tr >
-			 		<th>
-			 			permissionId
-			 		</th>
+					<th>
+						permissionId
+					</th>
 					<td>
-						{{ domains.permissionId }}
-					</td>
-				 </tr>
-				 <tr >
-			 		<th>
-			 			Authority
-			 		</th>
-					<td>
-						{{ domains.authority }}
-					</td>
-				 </tr>
-				 <tr>
-			 		<th>
-			 			이름
-			 		</th>
-					<td>
-						{{ domains.name }}
+						{{ domain.permissionId }}
 					</td>
 				</tr>
-				 <tr>
-			 		<th>
-			 			설명
-			 		</th>
+				<tr >
+					<th>
+						Authority
+					</th>
 					<td>
-						<textarea rows="5" ng-bind-html="domains.descritdtion" style="width:95%;border:0tdx;" readonly="true"></textarea>
+						{{ domain.authority }}
+					</td>
+				</tr>
+				<tr>
+					<th>
+						이름
+					</th>
+					<td>
+						{{ domain.name }}
+					</td>
+				</tr>
+				<tr>
+					<th>
+						기본 메뉴
+					</th>
+					<td>
+						{{domain.defaultMenu.name}}
+						<md-button class="md-raised md-primary" ng-click="selectDefaultMenu($event)">기본메뉴 선택</md-button>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2">
+						{{domain.descritdtion}}
 					</td>
 				</tr>
 			</table>
