더미 사용자 생성안하도록 수정 그룹 리스트 검색 조건 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/list.html
@@ -33,16 +33,16 @@
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
 					<md-input-container>
-						<label>부모코드명</label>
-						<input ng-model="searchInfo.parent.name"/>
+						<label>groupId</label>
+						<input ng-model="searchInfo.groupId"/>
 					</md-input-container>
 					<md-input-container>
 						<label>코드명</label>
 						<input ng-model="searchInfo.name"/>
 					</md-input-container>
 					<md-input-container>
-						<label>코드</label>
-						<input ng-model="searchInfo.groupId"/>
+						<label>부모코드</label>
+						<input ng-model="searchInfo.parent"/>
 					</md-input-container>
 				</md-card-content>
 			</cm-search-list-filters>
